tests/integration/snapshots/integration__conformance__n_object_single_quote.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{'a':0}
stderr ---
error: unexpected character `'`. expected start of a json value
 --> stdin:1:2
  |
1 | {'a':0}
  |  ^
