tests/integration/snapshots/integration__conformance__n_object_trailing_comment_slash_open.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{"a":"b"}//
stderr ---
error: unexpected character `/`. expected start of a json value
 --> stdin:1:10
  |
1 | {"a":"b"}//
  |          ^
